--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,9 +31,13 @@ jobs:
         if: ${{ steps.release.outputs.release_created }}
         run: |
           env GOOS=linux GOARCH=amd64 go build -ldflags "-X 'main.Version=${{ steps.release.outputs.tag_name }}'" -o bin/runpodctl-linux-amd .
+          env GOOS=linux GOARCH=arm go build -ldflags "-X 'main.Version=${{ steps.release.outputs.tag_name }}'" -o bin/runpodctl-linux-arm .
+          env GOOS=linux GOARCH=arm64 go build -ldflags "-X 'main.Version=${{ steps.release.outputs.tag_name }}'" -o bin/runpodctl-linux-arm64 .
           env GOOS=darwin GOARCH=amd64 go build -ldflags "-X 'main.Version=${{ steps.release.outputs.tag_name }}'" -o bin/runpodctl-darwin-amd .
           env GOOS=darwin GOARCH=arm64 go build -ldflags "-X 'main.Version=${{ steps.release.outputs.tag_name }}'" -o bin/runpodctl-darwin-arm .
           env GOOS=windows GOARCH=amd64 go build -ldflags "-X 'main.Version=${{ steps.release.outputs.tag_name }}'" -o bin/runpodctl-win-amd .
+          env GOOS=android GOARCH=arm64 go build -ldflags "-X 'main.Version=${{ steps.release.outputs.tag_name }}'" -o bin/runpodctl-android-arm64 .
+          env GOOS=android GOARCH=arm go build -ldflags "-X 'main.Version=${{ steps.release.outputs.tag_name }}'" -o bin/runpodctl-android-arm .
 
       - name: upload linux amd64 release binary
         if: ${{ steps.release.outputs.release_created }}
@@ -44,6 +48,26 @@ jobs:
           upload_url: ${{ steps.release.outputs.upload_url }}
           asset_path: bin/runpodctl-linux-amd
           asset_name: runpodctl-linux-amd
+          asset_content_type: application/octet-stream
+      - name: upload linux arm release binary
+        if: ${{ steps.release.outputs.release_created }}
+        uses: actions/upload-release-asset@v1.0.2
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+        with:
+          upload_url: ${{ steps.release.outputs.upload_url }}
+          asset_path: bin/runpodctl-linux-arm
+          asset_name: runpodctl-linux-arm
+          asset_content_type: application/octet-stream
+      - name: upload linux arm64 release binary
+        if: ${{ steps.release.outputs.release_created }}
+        uses: actions/upload-release-asset@v1.0.2
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+        with:
+          upload_url: ${{ steps.release.outputs.upload_url }}
+          asset_path: bin/runpodctl-linux-arm64
+          asset_name: runpodctl-linux-arm64
           asset_content_type: application/octet-stream
       - name: upload darwin amd64 release binary
         if: ${{ steps.release.outputs.release_created }}
@@ -74,4 +98,24 @@ jobs:
           upload_url: ${{ steps.release.outputs.upload_url }}
           asset_path: bin/runpodctl-win-amd
           asset_name: runpodctl-win-amd
+          asset_content_type: application/octet-stream
+      - name: upload android arm64 release binary
+        if: ${{ steps.release.outputs.release_created }}
+        uses: actions/upload-release-asset@v1.0.2
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+        with:
+          upload_url: ${{ steps.release.outputs.upload_url }}
+          asset_path: bin/runpodctl-android-arm64
+          asset_name: runpodctl-android-arm64
+          asset_content_type: application/octet-stream
+      - name: upload android arm release binary
+        if: ${{ steps.release.outputs.release_created }}
+        uses: actions/upload-release-asset@v1.0.2
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+        with:
+          upload_url: ${{ steps.release.outputs.upload_url }}
+          asset_path: bin/runpodctl-android-arm
+          asset_name: runpodctl-android-arm
           asset_content_type: application/octet-stream
